--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TODO App</title>
+  <title>TODO Application</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
